2019-04-20  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix loading of nodes beginning "g_t".

	* js/info.js:
	(create_link_dict, navigation_links): Extract the filename instead of 
	the fragment identifier from the URL.  Usually there is no difference, 
	but they differ when the node name does not begin with a letter, in 
	which case the fragment has "g_t" prefixed.

2019-04-20  Gavin Smith  <gavinsmith0123@gmail.com>

	Scroll to start of sidebar correctly.

	* js/info.js (add_header, scan_toc):
	Use "sidebar_start" as the ID of an element added at the start 
	of the table of contents, instead of "index".  "index" is the ID 
	of the <div> containing the Top node.  The Top node would be 
	scrolled right to the start some time after the page had 
	displayed, even if the user had already scrolled down in it.

2019-04-20  Gavin Smith  <gavinsmith0123@gmail.com>

	Make help optional.
	
	* js/info.js
	(config): New option 'embedded_help'.
	(add_icons): Do nothing unless this is set.
	(resolve_page): Remove code scrolling to icon bar.

2019-04-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* js/info.css: Comment out overflow properties because of 
	scrolling problems.

2019-04-20  Gavin Smith  <gavinsmith0123@gmail.com>

	Make fix_links leave internal links alone.

	* js/info.js
	(fix_links): Do nothing for internal links.  This is to
	speed up opening a large page, e.g. index.html when a manual is 
	first loaded, as DOM maniplation is slow.
	(updater) <"current-url">: Call with_sidebar_query and
	href_hash on argument.  This means that this message type takes 
	something more like a URL, instead of the special "linkid" 
	format.
	(on_click): Pass argument unaltered to set_current_url.
	(Text_input) <Enter pressed>: Do not call with_sidebar_query 
	before calling set_current_url.

	(scan_toc): Do not call linkid_to_url on argument.  Use prefix 
	in element selector to account for fragment identifier.
	<on_message> <"update-sidebar">: No extra processing before 